# mma

./: .gitmodules  CMakeLists.txt  README.md  index.html  mma.rst  talk.md
code/: CMakeLists.cython  ccall.f90  classy.h  cypy.py  cyspeed.c  cyspeed.pyx  fcall.c  fwork.f90  pywork.pyx
rst2pdf/: FindRST2PDF.cmake  slides.style
